# alaska

./: .gitignore  README.md  pyproject.toml  tests.md
src/: conftest.py  pytest.ini  test_01_is_container.py  test_02_post_correct_data_black.py  test_03_post_correct_data_polar.py  test_04_post_correct_data_brown.py  test_05_post_correct_data_gummy.py  test_06_read_bear_off_the_list.py  test_07_read_deleted_bear.py  test_08_post_not_full_bear.py  test_09_post_wrong_type.py  test_10_update_real_bear.py  test_11_wrong_update_real_bear.py
