[tool.poetry]
name = "alaska"
version = "0.0.1"
description = "atom entrance test project"
authors = ["lobov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
docker = "^7.1.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
